Fixed css on new components and some bugs squashed

--- a/src/chat/Post.css
+++ b/src/chat/Post.css
@@ -10,7 +10,7 @@
 .header-content {
     text-align: left;
     width: 100%;
-    background-color: rosybrown;
+    background-color: #9393a3;
     font-size: small;
 }
 .thumbnail {
@@ -27,14 +27,17 @@
     width: 100%;
 }
 .post {
-    background-color: lightgrey !important;
+    border-color: #53535c;
+    border-style: solid;
+    background-color: #a0a0a8;
     float: left;
     width: 100%;
     height: auto;
     word-wrap: break-word;
     font-size: small;
+
 }
 .post-container {
     margin-bottom: 20px;
-    padding-bottom: 100px;
+    padding-bottom: 350px;
 }
