--- a/src/chat/Reply.css
+++ b/src/chat/Reply.css
@@ -3,38 +3,37 @@
     text-align: left !important;
     padding: 5px;
 
+
 }
 .header-content {
     text-align: left;
     width: 100%;
-    background-color: rosybrown;
+    background-color: #a0a0a8;
     font-size: small;
 }
-.thumbnail {
+.reply-thumbnail {
     padding-left: 5px;
     padding-top: 5px;
     padding-bottom: 20px;
-    width: 200px;
-    height: auto;
+    height: 100px;
+    width: auto;
     float:left;
     margin-right:10px;
 
 }
 .img-reply {
     width: 100%;
-    background-color: palegoldenrod;
+    background-color: #b4b4bf;
 
 }
 .reply {
-    padding-left: 15px;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    padding-right: 5px;
+    border-style: solid;
+    border-color: #53535c;
     float: left;
+    height: 100px;
     width: 100%;
-    height: auto;
     word-wrap: break-word;
     font-size: small;
-    background-color: lightgrey !important;
+    background-color: #a0a0a8;
 
 }
